@@ -23,33 +23,19 @@
  * @author Christian Heller <christian.heller@tuxtax.de>
  */
 
-#ifndef MODEL_MEMORY_NAME_SOURCE
-#define MODEL_MEMORY_NAME_SOURCE
+#ifndef ITEM_MEMORY_NAME_SOURCE
+#define ITEM_MEMORY_NAME_SOURCE
 
 #include "../../../constant/model/memory/integer_memory_model.c"
 
-/** The names model memory name. */
-static int* NAMES_MODEL_MEMORY_NAME = NUMBER_0_INTEGER_MEMORY_MODEL_ARRAY;
+/** The data item memory name. */
+static int* DATA_ITEM_MEMORY_NAME = NUMBER_0_INTEGER_MEMORY_MODEL_ARRAY;
 
-/** The abstractions model memory name. */
-static int* ABSTRACTIONS_MODEL_MEMORY_NAME = NUMBER_1_INTEGER_MEMORY_MODEL_ARRAY;
+/** The count item memory name. */
+static int* COUNT_ITEM_MEMORY_NAME = NUMBER_1_INTEGER_MEMORY_MODEL_ARRAY;
 
-/** The models model memory name. */
-static int* MODELS_MODEL_MEMORY_NAME = NUMBER_2_INTEGER_MEMORY_MODEL_ARRAY;
+/** The size item memory name. */
+static int* SIZE_ITEM_MEMORY_NAME = NUMBER_2_INTEGER_MEMORY_MODEL_ARRAY;
 
-/** The details model memory name. */
-static int* DETAILS_MODEL_MEMORY_NAME = NUMBER_3_INTEGER_MEMORY_MODEL_ARRAY;
-
-//?? DELETE constants below later!
-
-/** The data model memory name. */
-static int* DATA_MODEL_MEMORY_NAME = NUMBER_0_INTEGER_MEMORY_MODEL_ARRAY;
-
-/** The count model memory name. */
-static int* COUNT_MODEL_MEMORY_NAME = NUMBER_1_INTEGER_MEMORY_MODEL_ARRAY;
-
-/** The size model memory name. */
-static int* SIZE_MODEL_MEMORY_NAME = NUMBER_2_INTEGER_MEMORY_MODEL_ARRAY;
-
-/* MODEL_MEMORY_NAME_SOURCE */
+/* ITEM_MEMORY_NAME_SOURCE */
 #endif
